Fixed image paths

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="hero__copy hero__copy--watermark">
             <img
               class="hero__mark"
-              src="./assets/Hero.png"
+              src="./assets/hero.png"
               alt=""
               aria-hidden="true"
             />
@@ -231,14 +231,14 @@
                 <div class="case__media">
                   <img
                     class="case__img"
-                    src="./assets/cases/case-1.1.jpg"
+                    src="./assets/cases/case-1.1.JPG"
                     alt="Металокерамична конструкция — снимка 1"
                     loading="lazy"
                     decoding="async"
                   />
                   <img
                     class="case__img"
-                    src="./assets/cases/case-1.2.jpg"
+                    src="./assets/cases/case-1.2.JPG"
                     alt="Металокерамична конструкция — снимка 2"
                     loading="lazy"
                     decoding="async"
@@ -259,14 +259,14 @@
                 <div class="case__media">
                   <img
                     class="case__img"
-                    src="./assets/cases/case-2.1.jpg"
+                    src="./assets/cases/case-2.1.JPG"
                     alt="Металокерамична конструкция — снимка 1"
                     loading="lazy"
                     decoding="async"
                   />
                   <img
                     class="case__img"
-                    src="./assets/cases/case-2.2.jpg"
+                    src="./assets/cases/case-2.2.JPG"
                     alt="Металокерамична конструкция — снимка 2"
                     loading="lazy"
                     decoding="async"
