Fixed header meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <title>Kisyov Dent</title>
 
-    <link rel="canonical" href="https://kisyovdent.bg/" />
+    <link rel="canonical" href="https://kisyovdent.com/" />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Kisyov Dent" />
@@ -18,7 +18,7 @@
       property="og:description"
       content="Зъботехническа лаборатория в Пловдив. Работа с клиники в страната чрез куриер."
     />
-    <meta property="og:url" content="https://kisyovdent.bg/" />
+    <meta property="og:url" content="https://kisyovdent.com/" />
 
     <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./styles.css" />
