--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
       content="Зъботехническа лаборатория в Пловдив. Работа с клиники в страната чрез куриер."
     />
     <meta property="og:url" content="https://kisyovdent.com/" />
+    <meta
+      property="og:image"
+      content="https://kisyovdent.com/assets/social-preview.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="https://kisyovdent.com/assets/social-preview.png"
+    />
 
     <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./styles.css" />
@@ -35,7 +48,7 @@
         },
         "telephone": "+359887859765",
         "email": "kisyovdent@gmail.com",
-        "url": "https://kisyovdent.bg/",
+        "url": "https://kisyovdent.com/",
         "sameAs": ["https://www.instagram.com/kisyovdent"]
       }
     </script>
