Improved og:title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="canonical" href="https://kisyovdent.com/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Kisyov Dent" />
+    <meta
+      property="og:title"
+      content="Kisyov Dent | Зъботехническа лаборатория в Пловдив"
+    />
     <meta
       property="og:description"
       content="Зъботехническа лаборатория в Пловдив. Работа с клиники в страната чрез куриер."
