Improved og:description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:description"
-      content="Зъботехническа лаборатория в Пловдив. Работа с клиники в страната чрез куриер."
+      content="Цирконий, послойна керамика и работа върху импланти. Над 20 години практика, индивидуален контрол върху всеки случай и доставка до клиники в цялата страна."
     />
     <meta property="og:url" content="https://kisyovdent.com/" />
     <meta
