--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
     <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./styles.css" />
 
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-GFESE09DGG"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-GFESE09DGG');
+    </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
