--- a/index.html
+++ b/index.html
@@ -93,12 +93,17 @@
         <section class="hero section" id="hero" data-rail-label="Начало">
           <div class="container hero__grid hero__grid--stack">
             <div class="hero__copy hero__copy--watermark">
-              <img
-                class="hero__mark"
-                src="./assets/hero.png"
-                alt=""
-                aria-hidden="true"
-              />
+              <picture class="hero__mark">
+                <source
+                  media="(max-width: 768px)"
+                  srcset="./assets/hero-mobile.png"
+                />
+                <img
+                  src="./assets/hero-desktop.png"
+                  alt=""
+                  aria-hidden="true"
+                />
+              </picture>
 
               <p class="kicker reveal">ЗЪБОТЕХНИЧЕСКА ЛАБОРАТОРИЯ</p>
 
