Added different resolution favicons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,56 @@
       content="https://kisyovdent.com/assets/social-preview.png"
     />
 
-    <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
+    <!-- Primary favicon (maximum compatibility) -->
+    <link rel="icon" href="/assets/favicons/favicon.ico" sizes="any" />
+
+    <!-- Standard PNG favicons -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicons/favicon-16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicons/favicon-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="/assets/favicons/favicon-48.png"
+    />
+
+    <!-- Apple Touch Icon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicons/apple-touch-icon.png"
+    />
+
+    <!-- Android / Chrome -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/favicons/android-chrome-192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/assets/favicons/android-chrome-512.png"
+    />
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="/assets/favicons/site.webmanifest" />
+
+    <!-- Theme color (important for Chrome mobile + SERP consistency) -->
+    <meta name="theme-color" content="#111417" />
+
     <link rel="stylesheet" href="./styles.css" />
 
     <script
