--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Зъботехническа лаборатория в Пловдив. Цирконий, металокерамика, фасети и работа върху импланти. Работа с клиники в страната чрез куриер."
     />
-    <title>Kisyov Dent</title>
+    <title>Kisyov Dent (Кисьов Дент) — Зъботехническа лаборатория</title>
 
     <link rel="canonical" href="https://kisyovdent.com/" />
 
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:description"
-      content="Цирконий, послойна керамика и работа върху импланти. Над 20 години практика, индивидуален контрол върху всеки случай и доставка до клиники в цялата страна."
+      content="Kisyov Dent (Кисьов Дент) — зъботехническа лаборатория в Пловдив. Цирконий, металокерамика, фасети и работа върху импланти. Работа с клиники в страната чрез куриер."
     />
     <meta property="og:url" content="https://kisyovdent.com/" />
     <meta
@@ -70,17 +70,17 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "LocalBusiness",
+        "@type": "DentalLaboratory",
         "name": "Kisyov Dent",
+        "alternateName": "Кисьов Дент",
+        "url": "https://kisyovdent.com/",
+        "telephone": "+359887859765",
+        "email": "kisyovdent@gmail.com",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Plovdiv",
           "addressCountry": "BG"
-        },
-        "telephone": "+359887859765",
-        "email": "kisyovdent@gmail.com",
-        "url": "https://kisyovdent.com/",
-        "sameAs": ["https://www.instagram.com/kisyovdent"]
+        }
       }
     </script>
 
